samples/zig/src/m_pd.zig

pub extern fn binbuf_free(x: *pd.BinBuf) void;
pub extern fn binbuf_duplicate(y: *const pd.BinBuf) ?*pd.BinBuf;
pub extern fn binbuf_text(x: *pd.BinBuf, text: [*:0]const u8, size: usize) void;
pub extern fn binbuf_gettext(x: *const pd.BinBuf, bufp: *[*]u8, lengthp: *c_int) void;
pub extern fn binbuf_clear(x: *pd.BinBuf) void;
pub extern fn binbuf_add(x: *pd.BinBuf, argc: c_int, argv: [*]const pd.Atom) void;
pub extern fn binbuf_addv(x: *pd.BinBuf, fmt: [*:0]const u8, ...) void;
pub extern fn binbuf_addbinbuf(x: *pd.BinBuf, y: *const pd.BinBuf) void;
pub extern fn binbuf_addsemi(x: *pd.BinBuf) void;
pub extern fn binbuf_restore(x: *pd.BinBuf, argc: c_int, argv: [*]const pd.Atom) void;
pub extern fn binbuf_print(x: *const pd.BinBuf) void;
pub extern fn binbuf_getnatom(x: *const pd.BinBuf) c_int;
pub extern fn binbuf_getvec(x: *const pd.BinBuf) [*c]pd.Atom;
pub extern fn binbuf_resize(x: *pd.BinBuf, newsize: c_int) c_int;
pub extern fn binbuf_eval(x: *const pd.BinBuf, target: *pd.Pd, argc: c_int, argv: [*]const pd.Atom) void;
pub extern fn binbuf_read(b: *pd.BinBuf, filename: [*:0]const u8, dirname: [*:0]const u8, crflag: c_int) c_int;
pub extern fn binbuf_read_via_canvas(b: *pd.BinBuf, filename: [*:0]const u8, canvas: *const pd.GList, crflag: c_int) c_int;
pub extern fn binbuf_read_via_path(b: *pd.BinBuf, filename: [*:0]const u8, dirname: [*:0]const u8, crflag: c_int) c_int;
pub extern fn binbuf_write(x: *const pd.BinBuf, filename: [*:0]const u8, dir: [*:0]const u8, crflag: c_int) c_int;
pub extern fn binbuf_evalfile(name: *pd.Symbol, dir: *pd.Symbol) void;
pub extern fn binbuf_realizedollsym(s: *pd.Symbol, ac: c_int, av: [*]const pd.Atom, tonew: c_int) [*c]pd.Symbol;
pub extern fn clock_new(owner: *anyopaque, @"fn": pd.Method) ?*pd.Clock;
pub extern fn clock_set(x: *pd.Clock, systime: f64) void;
pub extern fn clock_delay(x: *pd.Clock, delaytime: f64) void;
pub extern fn clock_unset(x: *pd.Clock) void;
pub extern fn clock_setunit(x: *pd.Clock, timeunit: f64, sampflag: c_int) void;
pub extern fn clock_getlogicaltime() f64;
pub extern fn clock_getsystime() f64;
pub extern fn clock_gettimesince(prevsystime: f64) f64;
pub extern fn clock_gettimesincewithunits(prevsystime: f64, units: f64, sampflag: c_int) f64;
pub extern fn clock_getsystimeafter(delaytime: f64) f64;
pub extern fn clock_free(x: *pd.Clock) void;
pub extern fn pd_new(cls: *pd.Class) [*c]pd.Pd;
pub extern fn pd_free(x: *pd.Pd) void;
pub extern fn pd_bind(x: *pd.Pd, s: *pd.Symbol) void;
pub extern fn pd_unbind(x: *pd.Pd, s: *pd.Symbol) void;
pub extern fn pd_findbyclass(s: *pd.Symbol, c: *const pd.Class) [*c]pd.Pd;
pub extern fn pd_pushsym(x: *pd.Pd) void;
pub extern fn pd_popsym(x: *pd.Pd) void;
pub extern fn pd_bang(x: *pd.Pd) void;
pub extern fn pd_pointer(x: *pd.Pd, gp: *pd.GPointer) void;
pub extern fn pd_float(x: *pd.Pd, f: pd.Float) void;
pub extern fn pd_symbol(x: *pd.Pd, s: *pd.Symbol) void;
pub extern fn pd_list(x: *pd.Pd, s: *pd.Symbol, argc: c_int, argv: [*]pd.Atom) void;
pub extern fn pd_anything(x: *pd.Pd, s: *pd.Symbol, argc: c_int, argv: [*]pd.Atom) void;
pub extern fn gpointer_init(gp: *pd.GPointer) void;
pub extern fn gpointer_copy(gpfrom: *const pd.GPointer, gpto: *pd.GPointer) void;
pub extern fn gpointer_unset(gp: *pd.GPointer) void;
pub extern fn gpointer_check(gp: *const pd.GPointer, headok: c_int) c_int;
pub extern fn inlet_new(owner: *pd.Object, dest: *pd.Pd, s1: *pd.Symbol, s2: *pd.Symbol) ?*pd.Inlet;
pub extern fn pointerinlet_new(owner: *pd.Object, gp: *pd.GPointer) ?*pd.Inlet;
pub extern fn floatinlet_new(owner: *pd.Object, fp: *pd.Float) ?*pd.Inlet;
pub extern fn symbolinlet_new(owner: *pd.Object, sp: **pd.Symbol) ?*pd.Inlet;
pub extern fn signalinlet_new(owner: *pd.Object, f: pd.Float) ?*pd.Inlet;
pub extern fn inlet_free(x: *pd.Inlet) void;
pub extern fn outlet_new(owner: *pd.Object, s: *pd.Symbol) ?*pd.Outlet;
pub extern fn outlet_bang(x: *pd.Outlet) void;
pub extern fn outlet_pointer(x: *pd.Outlet, gp: *pd.GPointer) void;
pub extern fn outlet_float(x: *pd.Outlet, f: pd.Float) void;
pub extern fn outlet_symbol(x: *pd.Outlet, s: *pd.Symbol) void;
pub extern fn outlet_list(x: *pd.Outlet, s: *pd.Symbol, argc: c_int, argv: [*]pd.Atom) void;
pub extern fn outlet_anything(x: *pd.Outlet, s: *pd.Symbol, argc: c_int, argv: [*]pd.Atom) void;
pub extern fn outlet_getsymbol(x: *pd.Outlet) [*c]pd.Symbol;
pub extern fn outlet_free(x: *pd.Outlet) void;
pub extern fn pd_checkobject(x: *pd.Pd) [*c]pd.Object;
pub extern fn glob_setfilename(dummy: *anyopaque, name: *pd.Symbol, dir: *pd.Symbol) void;
pub extern fn canvas_setargs(argc: c_int, argv: [*]const pd.Atom) void;
pub extern fn canvas_getargs(argcp: *c_int, argvp: *[*]pd.Atom) void;
pub extern fn canvas_getcurrentdir() [*c]pd.Symbol;
pub extern fn canvas_getcurrent() ?*pd.GList;
pub extern fn canvas_makefilename(c: *const pd.GList, file: [*:0]const u8, result: [*:0]u8, resultsize: c_int) void;
pub extern fn canvas_getdir(x: *const pd.GList) [*c]pd.Symbol;
pub const sys_font: [*c]u8 = @extern([*c]u8, .{
    .name = "sys_font",
});
pub const sys_fontweight: [*c]u8 = @extern([*c]u8, .{
    .name = "sys_fontweight",
});
pub extern fn sys_hostfontsize(fontsize: c_int, zoom: c_int) c_int;
pub extern fn sys_zoomfontwidth(fontsize: c_int, zoom: c_int, worstcase: c_int) c_int;
pub extern fn sys_zoomfontheight(fontsize: c_int, zoom: c_int, worstcase: c_int) c_int;
pub extern fn sys_fontwidth(fontsize: c_int) c_int;
pub extern fn sys_fontheight(fontsize: c_int) c_int;
pub extern fn canvas_dataproperties(x: *pd.GList, sc: *pd.Scalar, b: *pd.BinBuf) void;
pub extern fn canvas_open(x: *const pd.GList, name: [*:0]const u8, ext: [*:0]const u8, dirresult: [*:0]u8, nameresult: *[*]u8, size: c_uint, bin: c_int) c_int;
pub extern fn canvas_getsr(x: *pd.GList) pd.Float;
pub extern fn canvas_getsignallength(x: *pd.GList) c_int;
pub const struct__widgetbehavior = opaque {};
pub const struct__parentwidgetbehavior = opaque {};
pub extern fn pd_getparentwidget(x: *pd.Pd) ?*const pd.Parentwidgetbehavior;
pub extern fn class_new(name: *pd.Symbol, newmethod: pd.NewMethod, freemethod: pd.Method, size: usize, flags: c_int, arg1: t_atomtype, ...) ?*pd.Class;
pub extern fn class_new64(name: *pd.Symbol, newmethod: pd.NewMethod, freemethod: pd.Method, size: usize, flags: c_int, arg1: t_atomtype, ...) ?*pd.Class;
pub extern fn class_free(c: *pd.Class) void;
pub extern fn class_addcreator(newmethod: pd.NewMethod, s: *pd.Symbol, type1: t_atomtype, ...) void;
pub extern fn class_addmethod(c: *pd.Class, @"fn": pd.Method, sel: *pd.Symbol, arg1: t_atomtype, ...) void;
pub extern fn class_addbang(c: *pd.Class, @"fn": pd.Method) void;
pub extern fn class_addpointer(c: *pd.Class, @"fn": pd.Method) void;
pub extern fn class_doaddfloat(c: *pd.Class, @"fn": pd.Method) void;
pub extern fn class_addsymbol(c: *pd.Class, @"fn": pd.Method) void;
pub extern fn class_addlist(c: *pd.Class, @"fn": pd.Method) void;
pub extern fn class_addanything(c: *pd.Class, @"fn": pd.Method) void;
pub extern fn class_sethelpsymbol(c: *pd.Class, s: *pd.Symbol) void;
pub extern fn class_setwidget(c: *pd.Class, w: *const pd.Widgetbehavior) void;
pub extern fn class_setparentwidget(c: *pd.Class, w: *const pd.Parentwidgetbehavior) void;
pub extern fn class_getname(c: *const pd.Class) [*c]const u8;
pub extern fn class_gethelpname(c: *const pd.Class) [*c]const u8;
pub extern fn class_gethelpdir(c: *const pd.Class) [*c]const u8;
pub extern fn class_setdrawcommand(c: *pd.Class) void;
pub extern fn class_isdrawcommand(c: *const pd.Class) c_int;
pub extern fn class_set_extern_dir(s: *pd.Symbol) void;
pub extern fn class_domainsignalin(c: *pd.Class, onset: c_int) void;
pub const t_savefn = ?*const fn ([*c]pd.GObj, ?*pd.BinBuf) callconv(.C) void;
pub extern fn class_setsavefn(c: *pd.Class, f: pd.Savefn) void;
pub extern fn class_getsavefn(c: *const pd.Class) pd.Savefn;
pub extern fn obj_saveformat(x: *const pd.Object, bb: *pd.BinBuf) void;
pub const t_propertiesfn = ?*const fn ([*c]pd.GObj, ?*pd.GList) callconv(.C) void;
pub extern fn class_setpropertiesfn(c: *pd.Class, f: pd.Propertiesfn) void;
pub extern fn class_getpropertiesfn(c: *const pd.Class) pd.Propertiesfn;
pub const t_classfreefn = ?*const fn (?*pd.Class) callconv(.C) void;
pub extern fn class_setfreefn(c: *pd.Class, @"fn": pd.Classfreefn) void;
pub extern fn post(fmt: [*:0]const u8, ...) void;
pub extern fn startpost(fmt: [*:0]const u8, ...) void;
pub extern fn poststring(s: [*:0]const u8) void;
pub extern fn postfloat(f: pd.Float) void;
pub extern fn postatom(argc: c_int, argv: [*]const pd.Atom) void;
pub extern fn endpost() void;
pub extern fn bug(fmt: [*:0]const u8, ...) void;
pub extern fn pd_error(object: *const anyopaque, fmt: [*:0]const u8, ...) void;
pub const PD_CRITICAL: c_int = 0;
pub const PD_ERROR: c_int = 1;
pub const PD_NORMAL: c_int = 2;
pub const PD_DEBUG: c_int = 3;
pub const PD_VERBOSE: c_int = 4;
pub const t_loglevel = c_uint;
pub extern fn logpost(object: *const anyopaque, level: c_int, fmt: [*:0]const u8, ...) void;
pub extern fn verbose(level: c_int, fmt: [*:0]const u8, ...) void;
pub extern fn sys_isabsolutepath(dir: [*:0]const u8) c_int;
pub extern fn sys_bashfilename(from: [*:0]const u8, to: [*:0]u8) void;
pub extern fn sys_unbashfilename(from: [*:0]const u8, to: [*:0]u8) void;
pub extern fn open_via_path(dir: [*:0]const u8, name: [*:0]const u8, ext: [*:0]const u8, dirresult: [*:0]u8, nameresult: *[*]u8, size: c_uint, bin: c_int) c_int;
pub extern fn sched_geteventno() c_int;
pub extern fn sys_getrealtime() f64;
pub extern var sys_idlehook: ?*const fn () callconv(.C) c_int;
pub extern fn sys_open(path: [*:0]const u8, oflag: c_int, ...) c_int;
pub extern fn sys_close(fd: c_int) c_int;
pub extern fn sys_fopen(filename: [*:0]const u8, mode: [*:0]const u8) [*c]FILE;
pub extern fn sys_fclose(stream: *FILE) c_int;
pub extern fn sys_lock() void;
pub extern fn sys_unlock() void;
pub extern fn sys_trylock() c_int;
pub const t_sample = f32;
pub const union__sampleint_union = extern union {
    f: t_sample,
    i: u32,
};
pub const t_sampleint_union = union__sampleint_union;
const union_unnamed_5 = extern union {
    s_length: c_int,
    s_n: c_int,
};
pub const struct__signal = extern struct {
    unnamed_0: union_unnamed_5 = @import("std").mem.zeroes(union_unnamed_5),
    s_vec: [*c]t_sample = @import("std").mem.zeroes([*c]t_sample),
    s_sr: t_float = @import("std").mem.zeroes(t_float),
    s_nchans: c_int = @import("std").mem.zeroes(c_int),
    s_overlap: c_int = @import("std").mem.zeroes(c_int),
    s_refcount: c_int = @import("std").mem.zeroes(c_int),
    s_isborrowed: c_int = @import("std").mem.zeroes(c_int),
    s_isscalar: c_int = @import("std").mem.zeroes(c_int),
    s_borrowedfrom: [*c]struct__signal = @import("std").mem.zeroes([*c]struct__signal),
    s_nextfree: [*c]struct__signal = @import("std").mem.zeroes([*c]struct__signal),
    s_nextused: [*c]struct__signal = @import("std").mem.zeroes([*c]struct__signal),
    s_nalloc: c_int = @import("std").mem.zeroes(c_int),
};
pub const t_signal = pd.Signal;
pub const t_perfroutine = ?*const fn ([*c]pd.Int) callconv(.C) [*c]pd.Int;
pub extern fn signal_new(length: c_int, nchans: c_int, sr: pd.Float, scalarptr: *pd.Sample) [*c]pd.Signal;
pub extern fn signal_setmultiout(sig: *[*]pd.Signal, nchans: c_int) void;
pub extern fn plus_perform(args: *pd.Int) [*c]pd.Int;
pub extern fn plus_perf8(args: *pd.Int) [*c]pd.Int;
pub extern fn zero_perform(args: *pd.Int) [*c]pd.Int;
pub extern fn zero_perf8(args: *pd.Int) [*c]pd.Int;
pub extern fn copy_perform(args: *pd.Int) [*c]pd.Int;
pub extern fn copy_perf8(args: *pd.Int) [*c]pd.Int;
pub extern fn scalarcopy_perform(args: *pd.Int) [*c]pd.Int;
pub extern fn scalarcopy_perf8(args: *pd.Int) [*c]pd.Int;
pub extern fn dsp_add_plus(in1: *pd.Sample, in2: *pd.Sample, out: *pd.Sample, n: c_int) void;
pub extern fn dsp_add_copy(in: *pd.Sample, out: *pd.Sample, n: c_int) void;
pub extern fn dsp_add_scalarcopy(in: *pd.Float, out: *pd.Sample, n: c_int) void;
